Actions
Bug #13059
closed"regcomp.c", line 2236: error: syntax error near `/' with old fcc on Solaris 10
Bug #13059:
"regcomp.c", line 2236: error: syntax error near `/' with old fcc on Solaris 10
Updated by ngoto (Naohisa Goto) over 9 years ago
- Status changed from Open to Closed
Applied in changeset r57143.
regcomp.c: Fix compile error with old version of fcc on Solaris
- regcomp.c (get_min_match_length): Fix compile error with old version
of fcc (Fujitsu C Compiler) on Solaris 10. [Bug #13059][ruby-dev:49909]
Actions